// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tenant Quota Form Component should render the manage quotas form for a tenant no quotas defined 1`] = `
<div>
  <div
    class="tenant-quota-data-table"
  >
    <div
      class="miq-data-table"
    >
      <div
        class="cds--data-table-content"
      >
        <table
          class="cds--data-table cds--data-table--lg cds--data-table--visible-overflow-menu"
        >
          <thead>
            <tr>
              <th
                class="miq-data-table-header"
                scope="col"
              >
                <div
                  class="cds--table-header-label"
                >
                  Enforced
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </div>
              </th>
              <th
                class="miq-data-table-header"
                scope="col"
              >
                <div
                  class="cds--table-header-label"
                >
                  Description
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </div>
              </th>
              <th
                class="miq-data-table-header"
                scope="col"
              >
                <div
                  class="cds--table-header-label"
                >
                  Value
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </div>
              </th>
              <th
                class="miq-data-table-header"
                scope="col"
              >
                <div
                  class="cds--table-header-label"
                >
                  Units
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            aria-live="polite"
          >
            <tr
              class=""
              tabindex="0"
              title=""
            >
              <td>
                <div
                  class="cell"
                >
                  <div
                    class="cds--toggle"
                  >
                    <button
                      aria-checked="false"
                      aria-labelledby="0:Enforced_label"
                      class="cds--toggle__button"
                      id="0:Enforced"
                      role="switch"
                      tabindex="0"
                      type="button"
                    />
                    <label
                      class="cds--toggle__label"
                      for="0:Enforced"
                      id="0:Enforced_label"
                    >
                      <span
                        class="cds--toggle__label-text"
                        dir="auto"
                      >
                        <span
                          class="cds--front-line"
                          title="Enforce a Value"
                        />
                      </span>
                      <div
                        class="cds--toggle__appearance"
                      >
                        <div
                          class="cds--toggle__switch"
                        />
                        <span
                          aria-hidden="true"
                          class="cds--toggle__text"
                          dir="auto"
                        >
                          Off
                        </span>
                      </div>
                    </label>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="Testing Testing 123"
                  >
                    Testing Testing 123
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <div
                    class="cds--form-item quota-table-input cds--text-input-wrapper cds--text-input-wrapper--readonly"
                  >
                    <div
                      class="cds--text-input__label-wrapper"
                    >
                      <label
                        class="cds--label"
                        dir="auto"
                        for="0:Value"
                      >
                        <span
                          class="cds--front-line"
                          title=""
                        />
                      </label>
                    </div>
                    <div
                      class="cds--text-input__field-outer-wrapper"
                    >
                      <div
                        class="cds--text-input__field-wrapper"
                      >
                        <input
                          class="cds--text-input"
                          id="0:Value"
                          placeholder="Not Enforced"
                          readonly=""
                          tabindex="0"
                          title="Not Enforced"
                          type="number"
                          value=""
                        />
                        
                        <span
                          aria-atomic="true"
                          aria-live="assertive"
                          class="cds--text-input__counter-alert"
                          role="alert"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="Count"
                  >
                    Count
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class=""
              tabindex="1"
              title=""
            >
              <td>
                <div
                  class="cell"
                >
                  <div
                    class="cds--toggle"
                  >
                    <button
                      aria-checked="false"
                      aria-labelledby="1:Enforced_label"
                      class="cds--toggle__button"
                      id="1:Enforced"
                      role="switch"
                      tabindex="0"
                      type="button"
                    />
                    <label
                      class="cds--toggle__label"
                      for="1:Enforced"
                      id="1:Enforced_label"
                    >
                      <span
                        class="cds--toggle__label-text"
                        dir="auto"
                      >
                        <span
                          class="cds--front-line"
                          title="Enforce a Value"
                        />
                      </span>
                      <div
                        class="cds--toggle__appearance"
                      >
                        <div
                          class="cds--toggle__switch"
                        />
                        <span
                          aria-hidden="true"
                          class="cds--toggle__text"
                          dir="auto"
                        >
                          Off
                        </span>
                      </div>
                    </label>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="This is a Test"
                  >
                    This is a Test
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <div
                    class="cds--form-item quota-table-input cds--text-input-wrapper cds--text-input-wrapper--readonly"
                  >
                    <div
                      class="cds--text-input__label-wrapper"
                    >
                      <label
                        class="cds--label"
                        dir="auto"
                        for="1:Value"
                      >
                        <span
                          class="cds--front-line"
                          title=""
                        />
                      </label>
                    </div>
                    <div
                      class="cds--text-input__field-outer-wrapper"
                    >
                      <div
                        class="cds--text-input__field-wrapper"
                      >
                        <input
                          class="cds--text-input"
                          id="1:Value"
                          placeholder="Not Enforced"
                          readonly=""
                          tabindex="0"
                          title="Not Enforced"
                          type="number"
                          value=""
                        />
                        
                        <span
                          aria-atomic="true"
                          aria-live="assertive"
                          class="cds--text-input__counter-alert"
                          role="alert"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="GB"
                  >
                    GB
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        tabindex="0"
        type="submit"
      >
        Save
      </button>
      <button
        class="cds--btn cds--btn--secondary cds--btn--disabled"
        disabled=""
        style="margin-left: 10px;"
        tabindex="0"
        type="reset"
      >
        Reset
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        style="margin-left: 10px;"
        tabindex="0"
        type="button"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`Tenant Quota Form Component should render the manage quotas form for a tenant with 1 quota already defined 1`] = `
<div>
  <div
    class="tenant-quota-data-table"
  >
    <div
      class="miq-data-table"
    >
      <div
        class="cds--data-table-content"
      >
        <table
          class="cds--data-table cds--data-table--lg cds--data-table--visible-overflow-menu"
        >
          <thead>
            <tr>
              <th
                class="miq-data-table-header"
                scope="col"
              >
                <div
                  class="cds--table-header-label"
                >
                  Enforced
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </div>
              </th>
              <th
                class="miq-data-table-header"
                scope="col"
              >
                <div
                  class="cds--table-header-label"
                >
                  Description
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </div>
              </th>
              <th
                class="miq-data-table-header"
                scope="col"
              >
                <div
                  class="cds--table-header-label"
                >
                  Value
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </div>
              </th>
              <th
                class="miq-data-table-header"
                scope="col"
              >
                <div
                  class="cds--table-header-label"
                >
                  Units
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            aria-live="polite"
          >
            <tr
              class=""
              tabindex="0"
              title=""
            >
              <td>
                <div
                  class="cell"
                >
                  <div
                    class="cds--toggle"
                  >
                    <button
                      aria-checked="true"
                      aria-labelledby="0:Enforced_label"
                      class="cds--toggle__button"
                      id="0:Enforced"
                      role="switch"
                      tabindex="0"
                      type="button"
                    />
                    <label
                      class="cds--toggle__label"
                      for="0:Enforced"
                      id="0:Enforced_label"
                    >
                      <span
                        class="cds--toggle__label-text"
                        dir="auto"
                      >
                        <span
                          class="cds--front-line"
                          title="Enforce a Value"
                        />
                      </span>
                      <div
                        class="cds--toggle__appearance"
                      >
                        <div
                          class="cds--toggle__switch cds--toggle__switch--checked"
                        />
                        <span
                          aria-hidden="true"
                          class="cds--toggle__text"
                          dir="auto"
                        >
                          On
                        </span>
                      </div>
                    </label>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="Testing Testing 123"
                  >
                    Testing Testing 123
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <div
                    class="cds--form-item quota-table-input cds--text-input-wrapper"
                  >
                    <div
                      class="cds--text-input__label-wrapper"
                    >
                      <label
                        class="cds--label"
                        dir="auto"
                        for="0:Value"
                      >
                        <span
                          class="cds--front-line"
                          title=""
                        />
                      </label>
                    </div>
                    <div
                      class="cds--text-input__field-outer-wrapper"
                    >
                      <div
                        class="cds--text-input__field-wrapper"
                      >
                        <input
                          class="cds--text-input"
                          id="0:Value"
                          placeholder="Not Enforced"
                          tabindex="0"
                          title="Not Enforced"
                          type="number"
                          value="3"
                        />
                        
                        <span
                          aria-atomic="true"
                          aria-live="assertive"
                          class="cds--text-input__counter-alert"
                          role="alert"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="Count"
                  >
                    Count
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class=""
              tabindex="1"
              title=""
            >
              <td>
                <div
                  class="cell"
                >
                  <div
                    class="cds--toggle"
                  >
                    <button
                      aria-checked="false"
                      aria-labelledby="1:Enforced_label"
                      class="cds--toggle__button"
                      id="1:Enforced"
                      role="switch"
                      tabindex="0"
                      type="button"
                    />
                    <label
                      class="cds--toggle__label"
                      for="1:Enforced"
                      id="1:Enforced_label"
                    >
                      <span
                        class="cds--toggle__label-text"
                        dir="auto"
                      >
                        <span
                          class="cds--front-line"
                          title="Enforce a Value"
                        />
                      </span>
                      <div
                        class="cds--toggle__appearance"
                      >
                        <div
                          class="cds--toggle__switch"
                        />
                        <span
                          aria-hidden="true"
                          class="cds--toggle__text"
                          dir="auto"
                        >
                          Off
                        </span>
                      </div>
                    </label>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="This is a Test"
                  >
                    This is a Test
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <div
                    class="cds--form-item quota-table-input cds--text-input-wrapper cds--text-input-wrapper--readonly"
                  >
                    <div
                      class="cds--text-input__label-wrapper"
                    >
                      <label
                        class="cds--label"
                        dir="auto"
                        for="1:Value"
                      >
                        <span
                          class="cds--front-line"
                          title=""
                        />
                      </label>
                    </div>
                    <div
                      class="cds--text-input__field-outer-wrapper"
                    >
                      <div
                        class="cds--text-input__field-wrapper"
                      >
                        <input
                          class="cds--text-input"
                          id="1:Value"
                          placeholder="Not Enforced"
                          readonly=""
                          tabindex="0"
                          title="Not Enforced"
                          type="number"
                          value=""
                        />
                        
                        <span
                          aria-atomic="true"
                          aria-live="assertive"
                          class="cds--text-input__counter-alert"
                          role="alert"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="GB"
                  >
                    GB
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        tabindex="0"
        type="submit"
      >
        Save
      </button>
      <button
        class="cds--btn cds--btn--secondary cds--btn--disabled"
        disabled=""
        style="margin-left: 10px;"
        tabindex="0"
        type="reset"
      >
        Reset
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        style="margin-left: 10px;"
        tabindex="0"
        type="button"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;
